@@ -1,3 +1,9 @@
+2008-09-22  Janus Weil  <janus@gcc.gnu.org>
+
+	PR fortran/37486
+	* gfortran.dg/common_align_1.f90: New.
+	* gfortran.dg/warn_align_commons.f90: New.
+
 2008-09-22  Olivier Hainque  <hainque@adacore.com>
 
 	* gnat.dg/volatile3.adb: New test.
